[package]
name = "labyr"
version = "0.2.3"
edition = "2021"
authors = ["Jan M. D. Hansen"]
license = "GPL-3.0-only"
repository = "https://github.com/jamadaha/labyr"
description = "A PDDL benchmarker"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.1"
glob = "0.3.1"
indicatif = { version = "0.17.7" }
indicatif-log-bridge = "0.2.2"
log = "0.4.20"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.196", features = ["derive"] }
tempfile = "3"
toml = "0.8.9"
pretty-duration = "0.1.1"
walkdir = "2.5.0"
regex = "1.10.4"
