[package]
name = "labyr"
version = "0.2.5"
edition = "2021"
authors = ["Jan M. D. Hansen"]
license = "GPL-3.0-only"
repository = "https://github.com/jamadaha/labyr"
description = "A PDDL benchmarker"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
glob = "0.3.1"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.196", features = ["derive"] }
tempfile = "3"
toml = "0.8.9"
pretty-duration = "0.1.1"
regex = "1.10.4"
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0.83"
