[package]
name = "labyr"
version = "0.3.0"
edition = "2021"
authors = ["Jan M. D. Hansen"]
license = "GPL-3.0-only"
repository = "https://github.com/jamadaha/labyr"
description = "A PDDL benchmarker"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
glob = "0.3.1"
once_cell = "1.19.0"
path-absolutize = "3.1.1"
serde = { version = "1.0.196", features = ["derive"] }
tempfile = "3"
toml = "0.8.9"
walkdir = "2.5.0"
regex = "1.10.4"
anyhow = "1.0.83"
itertools = "0.12.1"
rayon = "1.10.0"
